Fix activity card block spacing

--- a/sass/blocks/_stock-activity-card.sass
+++ b/sass/blocks/_stock-activity-card.sass
@@ -17,9 +17,7 @@ $block: ".stock-activity-card"
 #{$block}
   position: relative
   background-color: #FFF
-
-  &:not(:last-child)
-    margin-bottom: 20px
+  margin-bottom: 20px
 
   // $Activity card MOD: role board
   &_role_board
